[package]
name = "bevy-test"
version = "0.1.0"
authors = ["Pravin Kumar <pravinshanmugam1995@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
rev = "4a06bbf"
[dependencies]
bevy_window = "0.1.0"